<resources>
    <string name="app_name">NYTSearch</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Enter Search Query</string>
    <string name="button_search">Search</string>
    <string name="search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="beginDate">Begin Date</string>
    <string name="save">Save</string>
    <string name="sortDate">Sort Date</string>
    <string name="fashion">Fashion</string>
    <string name="arts">Arts</string>
    <string name="sports">Sports</string>
    <string name="oldest">Oldest</string>
    <string name="newest">Newest</string>
    <string name="newsDesk">News Desk Values</string>
    <string name="retry">Retry</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string-array name="timeframe_string_array_values">
        <item>@string/newest</item>
        <item>@string/oldest</item>
    </string-array>

</resources>
