<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/beginDateTV"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="28dp"
        android:layout_weight="0.01"
        android:text="@string/beginDate"
        android:textAlignment="viewStart"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorSanMarino" />

    <TextView
        android:id="@+id/datePickerTV"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/beginDateTV"
        android:layout_below="@+id/beginDateTV"
        android:layout_marginEnd="13dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="11dp"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:text="Date Picker"
        android:layout_alignStart="@+id/beginDateTV" />

    <TextView
        android:id="@+id/sortDateTV"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePickerTV"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="18dp"
        android:text="@string/sortDate"
        android:textAlignment="viewStart"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorSanMarino" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/timeFrameSP"
        android:entries="@array/timeframe_string_array_values"
        android:textAlignment="center"
        android:layout_marginTop="38dp"
        android:layout_alignTop="@+id/sortDateTV"
        android:layout_alignStart="@+id/sortDateTV">

    </Spinner>

    <TextView
        android:id="@+id/newsDeskTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeFrameSP"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="18dp"
        android:text="@string/newsDesk"
        android:textAlignment="viewStart"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorSanMarino" />

    <CheckBox
        android:id="@+id/artsCB"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/arts"
        android:textColor="@color/colorSanMarino"
        android:checked="true"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/newsDeskTV"
        android:layout_alignEnd="@+id/newsDeskTV" />

    <CheckBox
        android:id="@+id/fashionCB"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/fashion"
        android:textColor="@color/colorSanMarino"
        android:checked="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/artsCB"
        android:layout_alignStart="@+id/artsCB" />

    <CheckBox
        android:id="@+id/sportsSB"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/sports"
        android:checked="true"
        android:textColor="@color/colorSanMarino"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/fashionCB"
        android:layout_alignStart="@+id/fashionCB" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/save"
        android:background="@color/colorSanMarino"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/sportsSB"
        android:textColor="@color/colorWhite"
        android:layout_alignParentStart="true" />


</RelativeLayout>